<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="#FFFFFF"
    tools:context=".notificationsfollowing">

    <!-- Your existing components -->


    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <TextView
            android:id="@+id/tabFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Following"
            android:textColor="#8B5A5A"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tabFollowing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="You"
            android:textColor="#8B5A5A"
            android:textSize="16sp"/>
    </LinearLayout>
    <ScrollView
        android:id="@+id/activityScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="New"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />
            <!-- Example activity item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ibbi"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:background="@drawable/circle_mask"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity1"
                    android:textColor="#000000"
                    android:textSize="14sp"/>


                <!-- Small preview image -->
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mountains"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/rfy"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:background="@drawable/circle_mask"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity2"
                    android:textColor="#000000"
                    android:textSize="14sp"/>


                <!-- Small preview image -->
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mountains2"
                    android:layout_marginStart="8dp"/> <!-- margin before the second image -->

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mountains"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="8dp"/> <!-- this creates the gap -->

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Today"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/rfy"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:background="@drawable/circle_mask"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity3"
                    android:textColor="#000000"
                    android:textSize="14sp"/>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="This Week"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sam"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:background="@drawable/circle_mask"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity4"
                    android:textColor="#000000"
                    android:textSize="14sp"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mountains"
                    android:scaleType="centerCrop"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/amman"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:background="@drawable/circle_mask"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/activity5"
                    android:textColor="#000000"
                    android:textSize="14sp"/>


                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/landscape"
                    android:scaleType="centerCrop"/>


            </LinearLayout>




            <!-- Add more activity rows below (copy the block) -->
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/homebtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/icon"
            android:tint="#8B5A5A"
            android:layout_marginHorizontal="16dp"/>

        <ImageView
            android:id="@+id/explorepg"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/shape"
            android:tint="#8B5A5A"
            android:layout_marginHorizontal="16dp"/>

        <ImageView
            android:id="@+id/post"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/plusbox"
            android:tint="#8B5A5A"
            android:layout_marginHorizontal="16dp"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/likeempty"
            android:tint="#8B5A5A"
            android:layout_marginHorizontal="16dp"/>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/profile_pic"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/circle_mask"
            android:scaleType="centerCrop"
            android:clipToOutline="true"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>